# openwrt-rsu-packages

libs/azure-c-shared-utility/: Makefile
libs/azure-c-shared-utility/patches/: 002-fix-gcc-11-build-error.patch
libs/azure-iot-sdk-c/: Makefile
libs/azure-iot-sdk-c/patches/: 001-CMakeList-remove-deps-include.patch  001-provisioning_client-CMakeList-remove-deps-include.patch  003-provisioning-client-CMake-Lists-fix-deps-include.patch
libs/azure-uamqp-c/: Makefile
libs/azure-uhttp-c/: Makefile
libs/azure-umqtt-c/: Makefile
libs/azure-utpm-c/: Makefile
libs/cpp-base64/: Makefile
libs/cpp-base64/src/: CMakeLists.txt
libs/macro-utils-c/: Makefile
libs/macro-utils-c/patches/: 0001-update-cmake_minimum_required.patch
libs/parson/: Makefile
libs/rapidjson/: Makefile
libs/rapidjson/patches/: 0001-update-cmake_minimum_required.patch
libs/spdlog/: Makefile
libs/umock-c/: Makefile
libs/umock-c/patches/: 0001-update-cmake_minimum_required.patch
net/oatpp/: Makefile
net/oatpp/patches/: 0001-update-cmake_minimum_required.patch
net/rsu-connector/: Makefile
net/rsu-connector/files/etc/config/: rsu
net/rsu-connector/files/etc/init.d/: rsu-connector  rsu-forwarder
net/rsu-connector/src/: CMakeLists.txt
